<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/delete_for_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_for_me"
        android:textAlignment="textStart"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold|normal"
        android:textColor="@color/black"
        android:padding="@dimen/_8sdp"
        android:contentDescription="@string/delete_for_me"
        tools:ignore="TextSizeCheck"/>

    <TextView
        android:id="@+id/delete_for_everyone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_for_everyone"
        android:textAlignment="textStart"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold|normal"
        android:textColor="@color/black"
        android:padding="@dimen/_8sdp"
        android:contentDescription="@string/delete_for_everyone"
        tools:ignore="TextSizeCheck"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAlignment="textStart"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold|normal"
        android:textColor="@color/black"
        android:padding="@dimen/_8sdp"
        android:contentDescription="@string/cancel"
        tools:ignore="TextSizeCheck"/>

</LinearLayout>