<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_15sdp"
    android:scrollbars="none"
    android:background="@drawable/back_sign"
    tools:context=".SetupProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_information"
            android:textSize="@dimen/_32sdp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:textColor="@color/mediumspringgreen"
            android:contentDescription="@string/profile_information"
            tools:ignore="TextSizeCheck"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_your_name_and_choose_image"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/lightgrey"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/set_your_name_and_choose_image"
            tools:ignore="TextSizeCheck"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:contentDescription="@string/profile_image"
            android:elevation="@dimen/_25sdp"
            android:src="@drawable/person"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_25sdp"
            app:cardCornerRadius="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp">

                <EditText
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:background="@drawable/edtxt_name_background"
                    android:hint="@string/type_your_name"
                    android:textAlignment="center"
                    android:textColor="@color/darkslategray"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold"
                    android:inputType="text"
                    tools:ignore="autofill" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/setup_profile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginVertical="@dimen/_15sdp"
                    android:elevation="@dimen/_25sdp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/setup_profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25sdp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_10sdp"
                    tools:ignore="TextSizeCheck" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>